--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-Roger Nicholson
-Kellie Mogg
+Kellie Mogg(https://github.com/kelliemogg)
+Allen Nicholson(https://github.com/ranicholson)
