--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
 Kellie Mogg <https://github.com/kelliemogg>
-Allen Nicholson <https://github.com/ranichols>
+Allen Nicholson <https://github.com/ranicholson>
